--- a/src/lyrics.css
+++ b/src/lyrics.css
@@ -1,7 +1,7 @@
 .lyrics-container {
   height: 50vh;
   width: 40vw;
-  margin: 0 auto;
+  margin: 1rem auto 0;
   white-space: pre-wrap;
   overflow-y: auto;
 }
